--- a/hugo_source/config.toml
+++ b/hugo_source/config.toml
@@ -15,7 +15,7 @@ whiteColor = "#ffffff"
   languageName = ""
   weight = 1
   languageCode = "en-us"
-  title = "Doc List"
+  title = "CBB Stats Help"
   dateFormat = "2 January 2006"
   home = "Home"
   logo = "CBB Stats Help"
