--- a/hugo_source/config.toml
+++ b/hugo_source/config.toml
@@ -57,4 +57,4 @@ whiteColor = "#ffffff"
     # contact
     [Languages.en.params.contact]
       title = "Question, Comment, or Concern?"
-      content = "I might not be able to reply right away or at all, but I'll read every single email. So if you want to send me an email, please do so here: <a href='cbbstatshelp@gmail.com'>cbbstatshelpgmail.com</a>."
+      content = "I might not be able to reply right away or at all, but I'll read every single email. So if you want to send me an email, please do so here: <a href='cbbstatshelp@gmail.com'>cbbstatshelp@gmail.com</a>."
